{
    "name": "PlayerActionInput",
    "maps": [
        {
            "name": "InputPlayerAction",
            "id": "d4ee359b-2cd3-4473-87c1-4692c2c35148",
            "actions": [
                {
                    "name": "Shooting",
                    "type": "Button",
                    "id": "a1a66122-41d9-44eb-bcb9-373f4612dc40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SilentKill",
                    "type": "Button",
                    "id": "7bdecdc9-0fd9-456e-8d18-b74c23c791e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangingWeapon",
                    "type": "Button",
                    "id": "00348e2f-2196-4c42-a40d-c98ec9b89632",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "48981095-f568-4301-981c-8525f9220f63",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shooting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce50390c-ee25-4867-8064-458229c96c72",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SilentKill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1c05c04-dee4-44f3-9329-624685e571ec",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangingWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}